# hkopendata-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: docs.yml
docs/: CNAME  mkdocs.yml
docs/docs/about/: code_of_conduct.md
test/: test_version.py
